# pronounce

./: .gitignore  LICENSE  README.md  pyproject.toml
pronounce/: cli.py  cube.py  main.py
scripts/: run.sh  set-up.sh
