[project]
name = "pronounce"
version = "0.1.0"
description = "A command-line client for the CUBE (Current British English) pronunciation dictionary"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "requests>=2.32.4",
    "rich>=14.0.0",
]

[project.scripts]
pronounce = "pronounce.main:main"

[tool.uv]
package = true

[project]
license = { text = "MIT" }
